k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Lightbulb app-service  # Name of the service
spec:
  selector:
    app: my-static-site  # Matches the label of the pods created by the deployment
  ports:
    - protocol: TCP
      port: 80           # Port on the service (accessible from outside)
      targetPort: 80      # Port on the container to route traffic to
  type: LoadBalancer      # Exposes the service externally (for cloud environments)
  # If you want to use it internally, you can set `type: ClusterIP`
  # or for NodePort access use `type: NodePort`
